# rewrite-normalization

./: .gitignore  EmergenceDemos.ipynb  LICENSE  README.md  demo.py  pyproject.toml
lean_proof/: Main.lean  README.md  lake-manifest.json  lakefile.toml
lean_proof/RewriteCollapse/: lemmas.lean  theorems.lean
src/: encoding_utils.py  rewrite_metrics.py  rules.py  simplify.py
tests/: test_entropy_derivation.py  test_gaussian_equivalence.py
