[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewrite_collapse"
version = "0.1.0"
description = "Rule-collapse and entropy tools for rewrite systems"
authors = [
  { name = "Travis A. Smith", email = "rewriteunity@gmail.com" }
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "sympy",
  "networkx",
  "scipy",
  "pytest"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-q"
